<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_short">AppAuth</string>
    <string name="auth_granted">Authorization granted</string>
    <string name="intro_header">OpenID AppAuth Demo</string>
    <string name="openid_logo_content_description">AppAuth Logo</string>
    <string name="refresh_token">Refresh token</string>
    <string name="access_token_expires_at">Access token expires at: %s</string>
    <string name="no_access_token_returned">No access token returned</string>
    <string name="no_refresh_token_returned">No refresh token returned</string>
    <string name="refresh_token_returned">Refresh token returned</string>
    <string name="no_id_token_returned">No ID token returned</string>
    <string name="id_token_returned">ID token returned</string>
    <string name="view_profile">View user info</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="login_hint_value">Account ID (e.g. test@example.com)</string>
    <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
    <string name="auth_options">Authorization options:</string>
    <string name="environment_selector_label">Region</string>
    <string name="browser_icon_contentDescription">Browser app icon</string>
    <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
    <string name="custom_tab_label">"%1$s (custom tab)"</string>
    <string name="retry_label">Retry</string>
    <string name="not_authorized">Not authorized</string>
    <string name="start_authorization">Start authorization</string>
    <string name="reauthorize">Reauthorize</string>
    <string name="sign_out">Sign out</string>
    <string name="no_access_token_expiry">Access time has no defined expiry</string>
    <string name="access_token_expired">Access token has expired</string>
    <string name="auth_settings">Authorization settings in use:</string>
    <string name="use_pending_intents">Use PendingIntent\'s for completion</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="app_name_debug" translatable="false">&appName; (debug)</string>
    <string name="user_agent_app_name" translatable="false">&appName; UCM Android</string>
    <string name="service_name">&appName; Service</string>
    <string name="service_auto_start_description">&appName; has been started automatically</string>
    <string name="service_description">This is required to receive calls while in background</string>
    <string name="sync_account_name">&appName; contacts</string>
    <string name="about_link" translatable="false">https://linphone.org</string>
    <string name="about_privacy_policy_link" translatable="false">https://www.linphone.org/privacy-policy</string>
    <string name="about_license_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version" translatable="false">&appName; Android %s</string>
    <string name="about_liblinphone_sdk_version" translatable="false">&appName; SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="about_text" translatable="false">GNU General Public License v3.0\n © 2010–2023 Belledonne Communications</string>
    <string name="about_weblate_link" translatable="false">https://weblate.linphone.org/projects/linphone/</string>
    <string name="about_weblate_translation">Help us translate &appName;</string>
    <string name="about_siplogging_title">Enable detailed SIP logging</string>
    <string name="about_siplogging_subtitle">May cause app instability. Requires restart.</string>
    <string name="about_logging_upload">Upload logs</string>
    <string name="about_logging_clear">Clear logs</string>
    <string name="logs_upload_failure">Failed to upload logs!</string>
    <string name="logs_reset_complete">Logs have been cleared</string>
    <string name="logs_url_copied_to_clipboard">Logs URL copied into clipboard</string>
    <string name="about_bugreport_email" translatable="false">support@dimensionstechnologies.com</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="select_your_country">Select your country</string>
    <string name="international_prefix">Prefix</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="assistant_choose_country_title">Country name or prefix</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="domain">Domain</string>
    <string name="sip_address">SIP address</string>
    <string name="sip_addresses">SIP addresses</string>
    <string name="cancel">Cancel</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="share_uploaded_logs_link">Share logs link using…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_unexpected">Unexpected error…</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transport">Transport</string>
    <string name="transport_udp">UDP</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_tls">TLS</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_in_progress">Connection in progress</string>
    <string name="status_error">Connection failed</string>
    <string name="no_account_configured">No account configured</string>
    <string name="about">About</string>
    <string name="assistant">Assistant</string>
    <string name="recordings">Recordings</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="history_calls_list">Calls</string>
    <string name="no_call_history">No call history</string>
    <string name="no_missed_call_history">No missed calls in your history</string>
    <string name="no_conference_call_history">No meeting call in your history</string>
    <string name="history_delete_one_dialog">Do you want to delete this record?</string>
    <string name="history_delete_many_dialog">Do you want to delete these records?</string>
    <plurals name="history_delete_dialog" translatable="false">
        <item quantity="one">@string/history_delete_one_dialog</item>
        <item quantity="other">@string/history_delete_many_dialog</item>
    </plurals>
    <string name="contact_invite_friend">Invite</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="contact_filter_hint">Search contacts</string>
    <string name="contact_send_sms_invite_text">Hello, join me on &appName;! You can download it for free at %s</string>
    <string name="contact_send_sms_invite_download_link" translatable="false">https://linphone.org/download</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_organization">Organization</string>
    <string name="contact_choose_existing_or_new_to_add_number">Select a contact or create a new one</string>
    <string name="contact_editor_write_permission_denied">Write Contacts permission denied, can\'t edit contact</string>
    <string name="contact_delete_one_dialog">Do you want to delete this contact?\nIt will also be removed from your device addressbook</string>
    <string name="contact_delete_many_dialog">Are you sure you want to delete these contacts?\nThey will also be removed from your device addressbook</string>
    <plurals name="contact_delete_dialog" translatable="false">
        <item quantity="one">@string/contact_delete_one_dialog</item>
        <item quantity="other">@string/contact_delete_many_dialog</item>
    </plurals>
    <string name="contact_new_choose_sync_account">Choose where to save the contact</string>
    <string name="contact_local_sync_account">Store locally</string>
    <string name="contact_cant_be_deleted">This contact can\'t be deleted</string>
    <string name="contact_details">Contact Details</string>
    <string name="contacts_ldap_query_more_results_available">More results are available, refine your search</string>
    <string name="contacts_new_contact_wont_be_visible_warning_dialog">You are about to create a new contact without a SIP URI nor a phone number, thus it won\'t be visible in &appName;.\n\nDo you want to create it anyway?</string>
    <string name="contacts_favoritesGroup">Favorites</string>
    <string name="contacts_androidContactsGroup">Android Contacts</string>
    <string name="contacts_searchResultsGroup">Search Results</string>
    <string name="contacts_searching">Searching…</string>
    <string name="content_description_is_favourite">This is one of your favorite contacts</string>
    <string name="contacts_failedToAddContactToFavorites">Failed to add contact to favourites</string>
    <string name="contacts_successfullyAddedContactToFavorites">Successfully added contact to favourites</string>
    <string name="contacts_failedToRemoveContactFromFavorites">Failed to remove contact from favourites</string>
    <string name="contacts_successfullyRemovedContactFromFavorites">Successfully removed contact from favourites</string>
    <string name="contacts_failedToAddUserToFavorites">Failed to add user to favourites</string>
    <string name="contacts_successfullyAddedUserToFavorites">Successfully added user to favourites</string>
    <string name="contacts_failedToRemoveUserFromFavorites">Failed to remove user from favourites</string>
    <string name="contacts_successfullyRemovedUserFromFavorites">Successfully removed user from favourites</string>
    <string name="contact_directory_add_title">Add Contact</string>
    <string name="contact_directory_edit_title">Edit Contact</string>
    <string name="contact_directory_edit_avatar">Edit</string>
    <string name="contact_directory_change_avatar">Change picture</string>
    <string name="contact_directory_remove_avatar">Remove picture</string>
    <string name="contact_directory_internal_number">Internal number</string>
    <string name="contact_directory_additional_fields">Additional fields</string>
    <string name="contact_directory_delete">Delete contact</string>
    <string name="contact_directory_save">Save</string>
    <string name="contact_directory_cancel">Cancel</string>
    <string name="content_description_menu_favourites">Favourites</string>
    <string name="content_description_go_back">Go back</string>
    <string name="content_description_change_contact_picture">Change contact picture</string>
    <string name="content_description_menu_history">Call history</string>
    <string name="content_description_menu_contacts">Contacts</string>
    <string name="content_description_menu_dialer">Dialer</string>
    <string name="content_description_menu_chat">Conversations</string>
    <string name="content_description_menu_voicemail">Voicemail</string>
    <string name="parking_title">Parking</string>
    <string name="parking_slots_hint">Tap an occupied slot to pick up the call parked there. During a call, tap a free slot to park it.</string>
    <string name="parking_no_slots">No parking slots</string>
    <string name="content_description_menu_parking">Parking</string>
</resources>