<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="org.linphone.activities.main.parking.viewmodels.ParkingSlotsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <TextView
            android:id="@+id/top_bar"
            style="@style/accent_colored_title_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:background="?attr/lightToolbarBackgroundColor"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/parking_title" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_bar"
            android:padding="20dp"
            android:text="@string/parking_slots_hint"
            android:textColor="?attr/secondaryTextColor"
            android:textSize="14sp"
            android:visibility="@{viewModel.slots.empty ? View.GONE : View.VISIBLE}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parking_slots_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/hint" />

        <TextView
            style="@style/empty_list_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_bar"
            android:gravity="center"
            android:text="@string/parking_no_slots"
            android:visibility="@{viewModel.slots.empty ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>

</layout>
