<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="backClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="avatarClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="deleteClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="org.linphone.activities.main.contact.viewmodels.DirectoryContactEditorViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:background="?attr/lightToolbarBackgroundColor">

            <ImageView
                android:id="@+id/back"
                android:onClick="@{backClickListener}"
                android:contentDescription="@string/content_description_go_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/button_background_drawable"
                android:padding="15dp"
                android:src="@drawable/icon_back" />

            <TextView
                style="@style/contact_header_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@{viewModel.isEditing ? @string/contact_directory_edit_title : @string/contact_directory_add_title}" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_bar"
            android:layout_above="@+id/buttons">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/avatar_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:gravity="center_horizontal"
                        android:onClick="@{avatarClickListener}"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="@dimen/contact_avatar_medium_size"
                            android:layout_height="@dimen/contact_avatar_medium_size"
                            android:background="@drawable/generated_avatar_bg"
                            android:src="@drawable/voip_single_contact_avatar"
                            android:contentDescription="@string/content_description_change_contact_picture" />

                        <TextView
                            style="@style/contact_edit_form_label_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/contact_directory_edit_avatar" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/favourite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/content_description_is_favourite"
                        android:onClick="@{() -> viewModel.toggleFavourite()}"
                        android:padding="5dp"
                        android:src="@{viewModel.isFavourite ? @drawable/icon_star_filled : @drawable/icon_star}"
                        app:tint="?attr/accentColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/avatar_layout"
                        android:layout_toStartOf="@id/favourite"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent_color"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phone_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent_color"
                                android:imeOptions="actionNext"
                                android:inputType="phone"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </RelativeLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/internal_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="@={viewModel.isInternalNumber}"
                    android:text="@string/contact_directory_internal_number"
                    android:visibility="@{viewModel.hasInternalNumberField ? View.VISIBLE : View.GONE}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="?attr/dividerColor" />

                <TextView
                    android:id="@+id/additional_fields_title"
                    style="@style/contact_edit_form_label_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/contact_directory_additional_fields"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:id="@+id/additional_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/delete"
                    style="@style/standard_text_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="?attr/button_background_drawable"
                    android:onClick="@{deleteClickListener}"
                    android:padding="10dp"
                    android:text="@string/contact_directory_delete"
                    android:textColor="@color/red_color"
                    android:visibility="@{viewModel.isEditing ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:enabled="@{!viewModel.saving}"
                android:onClick="@{() -> viewModel.save()}"
                android:text="@string/contact_directory_save"
                app:backgroundTint="?attr/accentColor" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{backClickListener}"
                android:text="@string/contact_directory_cancel"
                android:textColor="?attr/accentColor" />

        </LinearLayout>

        <include
            layout="@layout/wait_layout"
            app:visibility="@{viewModel.saving}"/>

    </RelativeLayout>

</layout>
