<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="favouritesClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="historyClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="contactsClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="dialerClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="chatClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="voicemailClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="parkingClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="org.linphone.activities.main.viewmodels.TabsViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/tabs_container"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="?attr/navbarColor">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_activity_tabs_fragment_size"
        app:layoutDescription="@xml/motion_main_activity_tabs_selector">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            layout_constraintGuide_percent="@{viewModel.anchor1, default=0.2}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            layout_constraintGuide_percent="@{viewModel.anchor2, default=0.4}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            layout_constraintGuide_percent="@{viewModel.anchor3, default=0.6}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            layout_constraintGuide_percent="@{viewModel.anchor4, default=0.8}" />

        <!-- Same as guideline4 while the Parking tab is hidden -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            layout_constraintGuide_percent="@{viewModel.anchor5, default=0.8}" />

        <ImageView
            android:id="@+id/favourites"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="@{favouritesClickListener}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline1"
            android:padding="15dp"
            android:contentDescription="@string/content_description_menu_favourites"
            android:src="@drawable/icon_star_filled"
            app:tint="@color/tab_icon_color" />

        <ImageView
            android:id="@+id/contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="@{contactsClickListener}"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:padding="15dp"
            android:contentDescription="@string/content_description_menu_contacts"
            android:src="@drawable/icon_users"
            app:tint="@color/tab_icon_color">
        </ImageView>


        <ImageView
            android:id="@+id/history"
            android:onClick="@{historyClickListener}"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:contentDescription="@string/content_description_menu_history"
            android:src="@drawable/icon_history"
            app:tint="@color/tab_icon_color"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/guideline3" />

        <TextView
            android:id="@+id/history_unread_count"
            style="@style/unread_count_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:translationY="@{viewModel.historyMissedCountTranslateY}"
            android:background="@{viewModel.missedCallsCount == 0 ? @drawable/hidden_unread_message_count_bg : @drawable/unread_message_count_bg}"
            android:text="@{viewModel.missedCallsCount == 0 ? `` : String.valueOf(viewModel.missedCallsCount)}"
            app:layout_constraintRight_toLeftOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="@{dialerClickListener}"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
                android:layout_centerInParent="true"
                android:padding="15dp"
                android:contentDescription="@string/content_description_menu_dialer"
                android:src="@drawable/icon_dialpad"
                app:tint="@color/tab_icon_color" >

        </ImageView>

        <!--
        android:src="@drawable/footer_chat"
        android:onClick="@{chatClickListener}"
        -->
        <ImageView
            android:visibility="gone"
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_description_menu_chat"
            android:padding="15dp"
            app:tint="@color/tab_icon_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline4" />

        <TextView
            android:visibility="gone"
            android:id="@+id/chat_unread_count"
            style="@style/unread_count_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:translationY="@{viewModel.chatUnreadCountTranslateY}"
            android:background="@{viewModel.unreadMessagesCount == 0 ? @drawable/hidden_unread_message_count_bg : @drawable/unread_message_count_bg}"
            android:text="@{viewModel.unreadMessagesCount == 0 ? `` : String.valueOf(viewModel.unreadMessagesCount)}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/parking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="@{parkingClickListener}"
            android:padding="15dp"
            android:contentDescription="@string/content_description_menu_parking"
            android:src="@drawable/icon_parking"
            app:tint="@color/tab_icon_color"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline5" />

        <TextView
            android:id="@+id/parking_occupied_count"
            style="@style/unread_count_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:background="@{viewModel.parkingOccupiedCount == 0 ? @drawable/hidden_unread_message_count_bg : @drawable/unread_message_count_bg}"
            android:text="@{viewModel.parkingOccupiedCount == 0 ? `` : String.valueOf(viewModel.parkingOccupiedCount)}"
            app:layout_constraintRight_toLeftOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/voicemail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:tint="@color/tab_icon_color"
            android:contentDescription="@string/content_description_menu_voicemail"
            android:onClick="@{voicemailClickListener}"
            android:padding="15dp"
            android:src="@drawable/footer_voicemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/voicemail_unread_count"
            style="@style/unread_count_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:translationY="@{viewModel.voicemailUnreadCountTranslateY}"
            android:background="@{viewModel.unreadVoicemailsCount == 0 ? @drawable/hidden_unread_message_count_bg : @drawable/unread_message_count_bg}"
            android:text="@{viewModel.unreadVoicemailsCount == 0 ? `` : String.valueOf(viewModel.unreadVoicemailsCount)}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/selector"
            android:layout_width="0dp"
            android:layout_height="@dimen/tabs_fragment_selector_size"
            android:background="@color/transparent_color"
            android:visibility="gone"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
    </RelativeLayout>
</layout>
